// openconfig.enums is generated by proto_generator as a protobuf
// representation of a YANG schema.
//
// Input schema modules:
//  - yang/rib/openconfig-rib-bgp.yang
// Include paths:
//   - yang/...
syntax = "proto3";

package openconfig.enums;

import "github.com/openconfig/ygot/proto/yext/yext.proto";

option go_package = "github.com/openconfig/ygot/demo/protobuf_getting_started/ribproto/openconfig/enums";

// OpenconfigBgpTypesAFISAFITYPE represents an enumerated type generated for the YANG identity AFI_SAFI_TYPE.
enum OpenconfigBgpTypesAFISAFITYPE {
  OPENCONFIGBGPTYPESAFISAFITYPE_UNSET = 0;
  OPENCONFIGBGPTYPESAFISAFITYPE_L3VPN_IPV4_MULTICAST = 53601692 [(yext.yang_name) = "L3VPN_IPV4_MULTICAST"];
  OPENCONFIGBGPTYPESAFISAFITYPE_L3VPN_IPV6_MULTICAST = 171618750 [(yext.yang_name) = "L3VPN_IPV6_MULTICAST"];
  OPENCONFIGBGPTYPESAFISAFITYPE_IPV4_UNICAST = 196909421 [(yext.yang_name) = "IPV4_UNICAST"];
  OPENCONFIGBGPTYPESAFISAFITYPE_L2VPN_EVPN = 213517208 [(yext.yang_name) = "L2VPN_EVPN"];
  OPENCONFIGBGPTYPESAFISAFITYPE_IPV6_UNICAST = 270342995 [(yext.yang_name) = "IPV6_UNICAST"];
  OPENCONFIGBGPTYPESAFISAFITYPE_IPV4_LABELED_UNICAST = 279108253 [(yext.yang_name) = "IPV4_LABELED_UNICAST"];
  OPENCONFIGBGPTYPESAFISAFITYPE_L3VPN_IPV4_UNICAST = 358537365 [(yext.yang_name) = "L3VPN_IPV4_UNICAST"];
  OPENCONFIGBGPTYPESAFISAFITYPE_IPV6_LABELED_UNICAST = 420698035 [(yext.yang_name) = "IPV6_LABELED_UNICAST"];
  OPENCONFIGBGPTYPESAFISAFITYPE_L3VPN_IPV6_UNICAST = 421890363 [(yext.yang_name) = "L3VPN_IPV6_UNICAST"];
  OPENCONFIGBGPTYPESAFISAFITYPE_L2VPN_VPLS = 533405094 [(yext.yang_name) = "L2VPN_VPLS"];
}

// OpenconfigBgpTypesAsPathSegmentType represents an enumerated type generated for the YANG enumerated type as-path-segment-type.
enum OpenconfigBgpTypesAsPathSegmentType {
  OPENCONFIGBGPTYPESASPATHSEGMENTTYPE_UNSET = 0;
  OPENCONFIGBGPTYPESASPATHSEGMENTTYPE_AS_SEQ = 1 [(yext.yang_name) = "AS_SEQ"];
  OPENCONFIGBGPTYPESASPATHSEGMENTTYPE_AS_SET = 2 [(yext.yang_name) = "AS_SET"];
  OPENCONFIGBGPTYPESASPATHSEGMENTTYPE_AS_CONFED_SEQUENCE = 3 [(yext.yang_name) = "AS_CONFED_SEQUENCE"];
  OPENCONFIGBGPTYPESASPATHSEGMENTTYPE_AS_CONFED_SET = 4 [(yext.yang_name) = "AS_CONFED_SET"];
}

// OpenconfigBgpTypesBGPWELLKNOWNSTDCOMMUNITY represents an enumerated type generated for the YANG identity BGP_WELL_KNOWN_STD_COMMUNITY.
enum OpenconfigBgpTypesBGPWELLKNOWNSTDCOMMUNITY {
  OPENCONFIGBGPTYPESBGPWELLKNOWNSTDCOMMUNITY_UNSET = 0;
  OPENCONFIGBGPTYPESBGPWELLKNOWNSTDCOMMUNITY_NO_EXPORT = 7425995 [(yext.yang_name) = "NO_EXPORT"];
  OPENCONFIGBGPTYPESBGPWELLKNOWNSTDCOMMUNITY_NO_EXPORT_SUBCONFED = 75227749 [(yext.yang_name) = "NO_EXPORT_SUBCONFED"];
  OPENCONFIGBGPTYPESBGPWELLKNOWNSTDCOMMUNITY_NOPEER = 77476850 [(yext.yang_name) = "NOPEER"];
  OPENCONFIGBGPTYPESBGPWELLKNOWNSTDCOMMUNITY_NO_ADVERTISE = 126797620 [(yext.yang_name) = "NO_ADVERTISE"];
}

// OpenconfigBgpTypesBgpOriginAttrType represents an enumerated type generated for the YANG enumerated type bgp-origin-attr-type.
enum OpenconfigBgpTypesBgpOriginAttrType {
  OPENCONFIGBGPTYPESBGPORIGINATTRTYPE_UNSET = 0;
  OPENCONFIGBGPTYPESBGPORIGINATTRTYPE_IGP = 1 [(yext.yang_name) = "IGP"];
  OPENCONFIGBGPTYPESBGPORIGINATTRTYPE_EGP = 2 [(yext.yang_name) = "EGP"];
  OPENCONFIGBGPTYPESBGPORIGINATTRTYPE_INCOMPLETE = 3 [(yext.yang_name) = "INCOMPLETE"];
}

// OpenconfigPolicyTypesINSTALLPROTOCOLTYPE represents an enumerated type generated for the YANG identity INSTALL_PROTOCOL_TYPE.
enum OpenconfigPolicyTypesINSTALLPROTOCOLTYPE {
  OPENCONFIGPOLICYTYPESINSTALLPROTOCOLTYPE_UNSET = 0;
  OPENCONFIGPOLICYTYPESINSTALLPROTOCOLTYPE_STATIC = 164198026 [(yext.yang_name) = "STATIC"];
  OPENCONFIGPOLICYTYPESINSTALLPROTOCOLTYPE_LOCAL_AGGREGATE = 167243989 [(yext.yang_name) = "LOCAL_AGGREGATE"];
  OPENCONFIGPOLICYTYPESINSTALLPROTOCOLTYPE_OSPF = 187006448 [(yext.yang_name) = "OSPF"];
  OPENCONFIGPOLICYTYPESINSTALLPROTOCOLTYPE_ISIS = 308545656 [(yext.yang_name) = "ISIS"];
  OPENCONFIGPOLICYTYPESINSTALLPROTOCOLTYPE_BGP = 436650411 [(yext.yang_name) = "BGP"];
  OPENCONFIGPOLICYTYPESINSTALLPROTOCOLTYPE_DIRECTLY_CONNECTED = 463126862 [(yext.yang_name) = "DIRECTLY_CONNECTED"];
  OPENCONFIGPOLICYTYPESINSTALLPROTOCOLTYPE_OSPF3 = 470106339 [(yext.yang_name) = "OSPF3"];
}

// OpenconfigRibBgpTypesINVALIDROUTEREASON represents an enumerated type generated for the YANG identity INVALID_ROUTE_REASON.
enum OpenconfigRibBgpTypesINVALIDROUTEREASON {
  OPENCONFIGRIBBGPTYPESINVALIDROUTEREASON_UNSET = 0;
  OPENCONFIGRIBBGPTYPESINVALIDROUTEREASON_INVALID_AS_LOOP = 281940072 [(yext.yang_name) = "INVALID_AS_LOOP"];
  OPENCONFIGRIBBGPTYPESINVALIDROUTEREASON_INVALID_ORIGINATOR = 329543457 [(yext.yang_name) = "INVALID_ORIGINATOR"];
  OPENCONFIGRIBBGPTYPESINVALIDROUTEREASON_INVALID_CLUSTER_LOOP = 363552896 [(yext.yang_name) = "INVALID_CLUSTER_LOOP"];
  OPENCONFIGRIBBGPTYPESINVALIDROUTEREASON_INVALID_CONFED = 404003798 [(yext.yang_name) = "INVALID_CONFED"];
}
